<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handleExecuteFrmEvent"
            type="com.example.myapplication.ui.fragment.ExecuteFragment" />

        <variable
            name="user"
            type="com.example.myapplication.model.User" />
    </data>

    <RelativeLayout
        android:background="@color/backgroundColor"
        android:id="@+id/relativeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.ExecuteFragment">

        <LinearLayout
            android:id="@+id/linearUserName"
            style="@style/ExecuteInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_group_to_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelNormalText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:text="@string/title_user_name" />

            <EditText
                android:id="@+id/etUserName"
                style="@style/UserEditTextInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/title_user_name"
                android:text="@{user.userName}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearUserEmail"
            style="@style/ExecuteInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearUserName"
            android:layout_marginTop="@dimen/view_group_to_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelNormalText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:text="@string/title_user_email" />

            <EditText
                android:id="@+id/etUserEmail"
                style="@style/UserEditTextInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/title_user_email"
                android:text="@{user.userEmail}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearUserAge"
            style="@style/ExecuteInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearUserEmail"
            android:layout_marginTop="@dimen/view_group_to_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelNormalText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:text="@string/title_user_age" />

            <EditText
                android:id="@+id/etUserAge"
                style="@style/UserEditTextInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/title_user_age"
                android:inputType="number"
                android:text="@{Integer.toString(user.userAge)}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearExecute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearUserAge"
            android:layout_marginTop="@dimen/view_group_to_view_group"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDelete"
                style="@style/ExecuteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> handleExecuteFrmEvent.deleteUser()}"
                android:text="@string/btn_action_delete" />

            <Button
                android:id="@+id/btnEdit"
                style="@style/ExecuteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> handleExecuteFrmEvent.updateUser()}"
                android:text="@string/btn_action_edit" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/ExecuteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> handleExecuteFrmEvent.addUser()}"
                android:text="@string/btn_action_add" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/blueAtoll"
            app:tint="@color/white" />

    </RelativeLayout>
</layout>
